--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
   <body>
     <div class="container"></div>
+    <script src="/bundle.js"></script>
   </body>
-  <script src="/bundle.js"></script>
 </html>
